@@ -58,5 +58,6 @@
 <!ENTITY kb_toggle_state_desc1 "Enable/Disable tool for current page">
 
 <!ENTITY handy_dict_more_details_desc1 "Visit home page for more details.">
+<!ENTITY handy_dict_more_details_desc2 "Kindly share your valuable feedback: kbatu.patel@gmail.com">
 
 
